# d3a-fsspec

./: .flake8  .gitignore  .gitlab-ci.yml  LICENSE  README.md  doi.py  doi_cli.py  fsspec_test.py  pyproject.toml  reflectivity.ort  requirements.txt  unit_testing.py
.github/workflows/: build.yaml
src/d3a_fsspec/: doi.py  doi_cli.py
test/: test_d3a.py
